ajout du slider

--- a/APP_JAVA/app/src/main/res/layout/activity_main.xml
+++ b/APP_JAVA/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:openwcv="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:screenOrientation="landscape"
+    android:configChanges="keyboardHidden|orientation|screenSize">
 
     <!-- OPENCV CAMERA2 -->
     <org.opencv.android.JavaCamera2View
@@ -811,271 +813,17 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    <!-- OLD STUFF -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/ButtonLayout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/bg_shape"
-        android:visibility="invisible"
-        android:animateLayoutChanges="true"
-        android:alpha="0.8"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/titleLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:animateLayoutChanges="true"
-            android:background="@drawable/config_layout_top"
-            android:padding="18dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/textLeft"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:text="@string/algorithme"
-                android:textColor="#ffffff"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/swapbutton"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/textAlgo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/k_means"
-                android:textColor="#ffffff"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textLeft"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageButton
-                android:id="@+id/swapbutton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="#ff55B4FF"
-                android:clickable="true"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                openwcv:srcCompat="@drawable/ic_action_name" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/slidersLayout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:visibility="visible"
-            android:padding="20dp"
-            android:animateLayoutChanges="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/titleLayout"
-            app:layout_constraintStart_toStartOf="parent" >
-
-            <androidx.constraintlayout.widget.Group
-                android:id="@+id/kmeansGroup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="visible"
-                app:constraint_referenced_ids="textNbCluster, seekBarNbCluster, textNbIt, seekBarNbIt, textThreshold, seekBarThreshold" />
-
-            <androidx.constraintlayout.widget.Group
-                android:id="@+id/hsvGroup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"
-                app:constraint_referenced_ids="textH, seekBarH, textS, seekBarS, textV, seekBarV" />
-
-            <TextView
-                android:id="@+id/textMinArea"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/aire_minimale_d_une_zone"
-                android:textSize="20sp"
-                android:textColor="#ff2196F3"
-                android:visibility="visible"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <SeekBar
-                android:id="@+id/seekBarMinArea"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="30dp"
-                android:progressDrawable="@drawable/seekbar_progress"
-                android:thumb="@drawable/seekbar_thumb"
-                android:layout_marginTop="10dp"
-                android:progress="500"
-                android:min="50"
-                android:max="10000"
-                android:visibility="visible"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textMinArea" />
-
-            <TextView
-                android:id="@+id/textNbCluster"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/nombre_de_clusters"
-                android:textSize="20sp"
-                android:textColor="#ff2196F3"
-                android:layout_marginTop="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/seekBarMinArea" />
-
-            <SeekBar
-                android:id="@+id/seekBarNbCluster"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="30dp"
-                android:progressDrawable="@drawable/seekbar_progress"
-                android:thumb="@drawable/seekbar_thumb"
-                android:layout_marginTop="10dp"
-                android:progress="3"
-                android:min="3"
-                android:max="10"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textNbCluster" />
-
-            <TextView
-                android:id="@+id/textNbIt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/nombre_d_it_rations"
-                android:textSize="20sp"
-                android:textColor="#ff2196F3"
-                android:layout_marginTop="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/seekBarNbCluster" />
-
-            <SeekBar
-                android:id="@+id/seekBarNbIt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="30dp"
-                android:progressDrawable="@drawable/seekbar_progress"
-                android:thumb="@drawable/seekbar_thumb"
-                android:layout_marginTop="10dp"
-                android:progress="3"
-                android:min="1"
-                android:max="10"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textNbIt" />
-
-            <TextView
-                android:id="@+id/textThreshold"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/seuil"
-                android:textSize="20sp"
-                android:textColor="#ff2196F3"
-                android:layout_marginTop="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/seekBarNbIt" />
-
-            <SeekBar
-                android:id="@+id/seekBarThreshold"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="30dp"
-                android:progressDrawable="@drawable/seekbar_progress"
-                android:thumb="@drawable/seekbar_thumb"
-                android:layout_marginTop="10dp"
-                android:progress="120"
-                android:min="1"
-                android:max="254"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textThreshold" />
-
-            <TextView
-                android:id="@+id/textH"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/h"
-                android:textSize="20sp"
-                android:textColor="#ff2196F3"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/seekBarMinArea" />
-
-            <SeekBar
-                android:id="@+id/seekBarH"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="30dp"
-                android:progressDrawable="@drawable/seekbar_progress"
-                android:thumb="@drawable/seekbar_thumb"
-                android:layout_marginTop="10dp"
-                android:progress="0"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textH" />
-
-            <TextView
-                android:id="@+id/textS"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/s"
-                android:textSize="20sp"
-                android:textColor="#ff2196F3"
-                android:layout_marginTop="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/seekBarH" />
-
-            <SeekBar
-                android:id="@+id/seekBarS"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="30dp"
-                android:progressDrawable="@drawable/seekbar_progress"
-                android:thumb="@drawable/seekbar_thumb"
-                android:layout_marginTop="10dp"
-                android:progress="0"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textS" />
-
-            <TextView
-                android:id="@+id/textV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/v"
-                android:textSize="20sp"
-                android:textColor="#ff2196F3"
-                android:layout_marginTop="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/seekBarS" />
-
-            <SeekBar
-                android:id="@+id/seekBarV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="30dp"
-                android:progressDrawable="@drawable/seekbar_progress"
-                android:thumb="@drawable/seekbar_thumb"
-                android:layout_marginTop="10dp"
-                android:progress="0"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textV" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Intervertir"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="10dp"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
