--- a/APP_JAVA/app/src/main/res/layout/activity_main.xml
+++ b/APP_JAVA/app/src/main/res/layout/activity_main.xml
@@ -310,7 +310,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/nombre_de_clusters"
                     android:textSize="25sp"
-                    android:textColor="#888888"
+                    android:textColor="#eeeeee"
                     android:layout_marginStart="18dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -355,7 +355,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/nombre_d_it_rations"
                     android:textSize="25sp"
-                    android:textColor="#888888"
+                    android:textColor="#eeeeee"
                     android:layout_marginStart="18dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -400,7 +400,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/seuil"
                     android:textSize="25sp"
-                    android:textColor="#888888"
+                    android:textColor="#eeeeee"
                     android:layout_marginStart="18dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -422,9 +422,100 @@
                     app:layout_constraintTop_toBottomOf="@+id/thresholdText" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/subLayout25"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:visibility="visible"
+                android:background="@drawable/card_bg"
+                android:padding="2dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/subLayout24">
+
+                <TextView
+                    android:id="@+id/accuracyText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pr_cision"
+                    android:textSize="25sp"
+                    android:textColor="#eeeeee"
+                    android:layout_marginStart="18dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <SeekBar
+                    android:id="@+id/accuracySeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="30dp"
+                    android:progressDrawable="@drawable/seekbar_progress"
+                    android:thumb="@drawable/seekbar_thumb"
+                    android:layout_marginBottom="0dp"
+                    android:progress="0"
+                    android:min="0"
+                    android:max="100"
+                    android:visibility="visible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/accuracyText" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/subLayout26"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:visibility="visible"
+                android:background="@drawable/card_bg"
+                android:padding="2dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/subLayout25">
+
+                <TextView
+                    android:id="@+id/divisionSizeText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/taille_des_divisions"
+                    android:textSize="25sp"
+                    android:textColor="#eeeeee"
+                    android:layout_marginStart="18dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <SeekBar
+                    android:id="@+id/divisionSizeSeekBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="30dp"
+                    android:progressDrawable="@drawable/seekbar_progress"
+                    android:thumb="@drawable/seekbar_thumb"
+                    android:layout_marginBottom="0dp"
+                    android:progress="0"
+                    android:min="0"
+                    android:max="100"
+                    android:visibility="visible"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/divisionSizeText" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-    <!-- TODO FILTERS -->
+    <!-- FILTERS LAYOUT -->
     <ScrollView
         android:id="@+id/filterLayout"
         android:layout_width="fill_parent"
@@ -745,6 +836,19 @@
             android:layout_centerInParent="false"
             android:fontFamily="@font/cocogoose_typo" />
 
+        <TextView
+            android:id="@+id/state4"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="@string/contour"
+            android:textSize="22sp"
+            android:layout_toEndOf="@id/state3"
+            android:textColor="@color/grey_color"
+            android:layout_centerInParent="false"
+            android:fontFamily="@font/cocogoose_typo" />
+
     </RelativeLayout>
     <!-- TAB LAYOUT -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -822,6 +926,7 @@
         android:layout_marginTop="10dp"
         android:scaleX="1.5"
         android:scaleY="1.5"
+        android:textColor="#eeeeee"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
